[gd_scene load_steps=3 format=3 uid="uid://dk2xcmy14lc3n"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_c64a0"]
[ext_resource type="LabelSettings" uid="uid://bwp5a8gov2iuv" path="res://resources/labels/menu_title.tres" id="1_qoqwt"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c64a0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -239.0
offset_right = 438.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -317.0
offset_right = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSE"
label_settings = ExtResource("1_qoqwt")
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../GoBackToMenuButton")
text = "Resume"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="GoBackToMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Quit to menu"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GoBackToMenuButton" to="." method="_on_go_back_to_menu_button_pressed"]
